export const snapshot = {};

snapshot[`insert a row into a table 1`] = `
{
  data: {
    inserted_rows: 1,
    request_id: "",
    table: "employees",
    type: "InsertRow",
  },
}
`;

snapshot[`update a row 1`] = `
{
  data: {
    request_id: "",
    table: "employees",
    type: "UpdateRow",
    updated_rows: 1,
  },
}
`;

snapshot[`get single row 1`] = `
{
  data: {
    request_id: "",
    row: {
      City: "Addis",
      Country: "Ethiopia",
    },
    table: "employees",
    type: "GetRow",
  },
}
`;

snapshot[`delete a row from a table 1`] = `
{
  data: {
    deleted_rows: 1,
    request_id: "",
    table: "employees",
    type: "DeleteRow",
  },
}
`;

snapshot[`insert a batch of rows into a table 1`] = `
{
  data: {
    inserted_rows: 2,
    request_id: "",
    table: "media_types",
    type: "BatchInsertRow",
  },
}
`;

snapshot[`list media types table 1`] = `
{
  data: {
    request_id: "",
    rows: [
      {
        MediaTypeId: 1,
        Name: "MPEG audio file",
      },
      {
        MediaTypeId: 2,
        Name: "Protected AAC audio file",
      },
      {
        MediaTypeId: 3,
        Name: "Protected MPEG-4 video file",
      },
      {
        MediaTypeId: 4,
        Name: "Purchased AAC audio file",
      },
      {
        MediaTypeId: 5,
        Name: "AAC audio file",
      },
      {
        MediaTypeId: 6,
        Name: "batch one",
      },
      {
        MediaTypeId: 7,
        Name: "batch two",
      },
    ],
    table: "media_types",
    type: "ListRows",
  },
}
`;
